# API-Listing-Platform-As-A-Service

./: .dockerignore  .gitignore  ARCHITECTURE_GUIDE.md  ARCHITECTURE_STRATEGY.md  BRANCH_STRATEGY.md  CLOUD_RUN_STRATEGY.md  CURSOR_MCP_SETUP.md  DEPLOYMENT.md  DEVELOPMENT_STRUCTURE.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  GOOGLE_CLOUD_MCP_SETUP.md  MANUAL_GITHUB_SECRETS_SETUP.md  MCP_SETUP.md  NOTION_ARCHITECTURE_STRATEGY.md  PROJECT_SUMMARY.md  activate_mcp.sh  cloudbuild.yaml  cloudrun-frontend.yaml  cloudrun-tenant-template.yaml  cloudrun.yaml  deploy.sh  docker-compose.yml  env.example  env.production  migrate-to-monorepo.sh  mypy.ini  pyproject.toml  pytest.ini  requirements-mcp.txt  requirements.txt  run_tests.sh  service-account-key.json.template  setup_github_secrets.sh  verify_mcp_setup.sh
.github/: BRANCH_PROTECTION.md  CODEOWNERS  README.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  infrastructure.yml  migrate.yml  secrets.yml
database/: init.sql
laas/: __init__.py  main.py
laas/api/: __init__.py
laas/api/v1/: router.py
laas/api/v1/endpoints/: auth.py
laas/auth/: __init__.py  dependencies.py  jwt_handler.py  password.py  rbac.py
laas/core/: config.py
laas/database/: __init__.py  connection.py  models.py
laas/middleware/: __init__.py  audit.py  rate_limit.py  tenant.py
laas/schemas/: __init__.py  auth.py
laas/search/: engine.py
tests/: conftest.py  test_database.py  test_health.py  test_iam_endpoints.py  test_search.py
